Alterando título da atividade 2

--- a/atividade2/index.html
+++ b/atividade2/index.html
@@ -11,7 +11,7 @@
 <body>
     <section>
         <p>Vetores</p>
-        <h2>Exemplo - Notas boas</h2>
+        <h2>Atividade 2 - Notas boas 2.0</h2>
         <font face="arial">
             <form name="frmnumero" action="#" method="get" onsubmit="return validaProc()">
                 <fieldset class="cadinteiro">
